--- a/SarmadAndroidAppCollection/Blog App/app/src/main/AndroidManifest.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.BlogApp"
         tools:targetApi="31">
         <activity
+            android:name=".SignInandRegistrationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".register.WelcomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
