--- a/SarmadAndroidAppCollection/Blog App/app/src/main/AndroidManifest.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.BlogApp"
         tools:targetApi="31">
         <activity
-            android:name=".SignInandRegistrationActivity"
+            android:name=".register.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".register.SignInActivity"
             android:exported="false" />
         <activity
             android:name=".register.WelcomeActivity"
