add progress bar correct the SignIn Activity

--- a/SarmadAndroidAppCollection/Blog App/app/src/main/AndroidManifest.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".register.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".register.SignInActivity"
+            android:name=".register.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".register.WelcomeActivity"
