--- a/SarmadAndroidAppCollection/Blog App/app/src/main/AndroidManifest.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.BlogApp"
         tools:targetApi="31">
         <activity
+            android:name=".register.ForgotPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddArticleActivity"
             android:exported="false" />
         <activity
