--- a/SarmadAndroidAppCollection/Blog App/gradle/libs.versions.toml
+++ b/SarmadAndroidAppCollection/Blog App/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.5.0"
 clansFab = "1.6.4"
+firebaseBom = "33.1.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -14,9 +15,11 @@ firebaseDatabase = "21.0.0"
 glide = "4.16.0"
 firebaseStorage = "21.0.0"
 circleprogressbar = "1.3.6"
+playServicesAuth = "21.2.0"
 
 [libraries]
 clans-fab = { group = "com.github.clans", name = "fab", version.ref = "clansFab" }
+firebase-bom = { group = "com.google.firebase",name = "firebase-bom", version.ref = "firebaseBom" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -29,6 +32,7 @@ firebase-database = { group = "com.google.firebase", name = "firebase-database",
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
 circleprogressbar = { group = "com.dinuscxj", name = "circleprogressbar", version.ref = "circleprogressbar" }
+play-services-auth = { group = "com.google.android.gms", name="play-services-auth", version.ref = "playServicesAuth" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
