--- a/SarmadAndroidAppCollection/Blog App/gradle/libs.versions.toml
+++ b/SarmadAndroidAppCollection/Blog App/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.5.0"
 clansFab = "1.6.4"
 firebaseBom = "33.1.1"
+googleGoogleAuthLibraryOauth2Http = "1.19.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -16,10 +17,15 @@ glide = "4.16.0"
 firebaseStorage = "21.0.0"
 circleprogressbar = "1.3.6"
 playServicesAuth = "21.2.0"
+firebaseMessaging = "24.0.0"
+firebaseAnalytics = "22.0.2"
+volley = "1.2.1"
 
 [libraries]
 clans-fab = { group = "com.github.clans", name = "fab", version.ref = "clansFab" }
+#compiler = { group = "com.github.bumptech", name = "glide:compiler", version.ref = "glide" }
 firebase-bom = { group = "com.google.firebase",name = "firebase-bom", version.ref = "firebaseBom" }
+google-google-auth-library-oauth2-http = { group = "com.google.auth", name = "google-auth-library-oauth2-http", version.ref = "googleGoogleAuthLibraryOauth2Http" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -33,6 +39,9 @@ glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "gl
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
 circleprogressbar = { group = "com.dinuscxj", name = "circleprogressbar", version.ref = "circleprogressbar" }
 play-services-auth = { group = "com.google.android.gms", name="play-services-auth", version.ref = "playServicesAuth" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
+firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics", version.ref = "firebaseAnalytics" }
+volley = { group = "com.android.volley", name="volley", version.ref = "volley" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
