--- a/SarmadAndroidAppCollection/Blog App/gradle/libs.versions.toml
+++ b/SarmadAndroidAppCollection/Blog App/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ circleprogressbar = "1.3.6"
 playServicesAuth = "21.2.0"
 firebaseMessaging = "24.0.0"
 firebaseAnalytics = "22.0.2"
+richeditorAndroid = "2.0.0"
 volley = "1.2.1"
 
 [libraries]
