--- a/SarmadAndroidAppCollection/Blog App/app/src/main/AndroidManifest.xml
+++ b/SarmadAndroidAppCollection/Blog App/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.BlogApp"
         tools:targetApi="31">
         <activity
+            android:name=".ArticlesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".SaveBlogActivity"
             android:exported="false" />
         <activity
